--- a/code/core_adv/day-9-a-junit-mockito2/build.gradle
+++ b/code/core_adv/day-9-a-junit-mockito2/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:3.6.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    
+    
+    implementation 'org.apache.logging.log4j:log4j-api:2.7'
+    implementation 'org.apache.logging.log4j:log4j-core:2.7'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.7'
 }
