--- a/code/core_adv/day-9-junit-basics/build.gradle
+++ b/code/core_adv/day-9-junit-basics/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
- 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
+     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+
+  testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-engine', version: '1.8.2'
    
 }
